--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,89 @@
-.App {
-  text-align: center;
+
+
+.message {
+  padding: 10px;
+  border-radius: 8px;
+  overflow-wrap: break-word;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.sent {
+  background-color: #f5f5f5  ;
+  align-self: flex-end;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.received {
+  background-color: #ffeee1;
+  align-self: flex-start;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+input {
+  flex: 1;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  margin-right: 30px;
+  margin-left: 30px;
+}
+
+
+button {
+  padding: 8px 16px;
+  background-color: #007bff;
   color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+button:hover {
+  background-color: #0056b3;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app {
+  display: flex;
+  height: 100vh;
+  overflow-x: hidden;
+}
+
+
+
+
+.content {
+  display :flex; 
+  flex-direction: column;
+  overflow : hidden;
+  overflow-y: auto;
+  background-color: rgb(255,255, 255);
+}
+
+.input-box {
+  justify-content: center;
+  display: flex;
+  position: fixed; /* stiky*/
+  bottom: 0;
+  left: 250px;
+  right: 0%;
+  align-items: center;
+  height: 70px;
+  box-shadow: 0px -3px 5px rgba(0, 0, 0, 0.1);
+  flex:1;
+  background-color: white;
+}
+.auto-expanding-input {
+  max-width: 50%;
+  border-radius: 8px;
+  box-sizing: border-box;
+  resize: none; /* Disable resizing handle */
+  overflow-y: hidden; /* Hide vertical scrollbar */
+  min-height: 36px; /* Set a minimum height */
+  max-height: 190px; /* Set a maximum height if needed */
+}
+
+
+.chat-box {
+  width: 60% ;
+  min-width: 270px;
+  height: 100%;
+  padding: 10px;
+  border-radius: 8px;
 }
